Fix overflow on markdown rendered pages

--- a/packages/frontend/app/pages/globals.css
+++ b/packages/frontend/app/pages/globals.css
@@ -248,7 +248,7 @@ body.no-scrollbar {
 
 .thin-scrollbar {
     --width: var(--scrollbar-width, 0.35rem);
-    --height: var(--scrollbar-width, 0.35rem);
+    --height: var(--scrollbar-width, 0.25rem);
     --radius: 0.3rem;
 }
 
